# sc-h3492-eitc-calc

./: CHART_METHODOLOGY.md  README.md  generate_dynamic_charts.py  pyproject.toml  setup.py
.github/workflows/: deploy-charts.yml
sc_h3492_eitc/: __init__.py  household.py  reform.py
sc_h3492_eitc/dynamic_charts/: __init__.py  charts.py  microsim.py
